--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,12 @@
-MONGO_URI=mongodb+srv://shivyaan:test123@budget-trackng-cluster.rl2m5ih.mongodb.net/personal-budget-tracker
+# MongoDB Connection
+MONGO_URI=mongodb+srv://shivyaan:DBpass12345@budget-trackng-cluster.rl2m5ih.mongodb.net/per>
+
+
+# Server Configuration
 PORT=5000
+NODE_ENV=development
+
+
+# Authentication (for future use)
+JWT_SECRET=your_very_strong_secret_here_123!
+JWT_EXPIRE=30d
